Project

General

Profile

Actions

Bug #49115

closed

[rbd-mirror] image rename might not be propagated under snapshot-based mode

Added by Jason Dillaman over 3 years ago. Updated about 3 years ago.

Status:
Resolved
Priority:
Normal
Assignee:
Target version:
-
% Done:

0%

Source:
Tags:
Backport:
octopus,pacific
Regression:
No
Severity:
3 - minor
Reviewed:
Affected Versions:
ceph-qa-suite:
Pull request ID:
Crash signature (v1):
Crash signature (v2):

Description

If the exclusive-lock is enabled, the rename might be executed by short-life client A while long-life client B might acquire the exclusive-lock and actually create a mirror snapshot. In this case, if client B has had the image open since before client A renamed the image, it will not properly write the new image in the ImageState structure.


Related issues 2 (0 open2 closed)

Copied to rbd - Backport #49454: octopus: [rbd-mirror] image rename might not be propagated under snapshot-based modeResolvedMykola GolubActions
Copied to rbd - Backport #49455: pacific: [rbd-mirror] image rename might not be propagated under snapshot-based modeResolvedJason DillamanActions
Actions #1

Updated by Mykola Golub over 3 years ago

  • Status changed from New to In Progress
  • Assignee set to Mykola Golub
Actions #2

Updated by Mykola Golub over 3 years ago

  • Status changed from In Progress to Fix Under Review
  • Pull request ID set to 39463
Actions #3

Updated by Jason Dillaman about 3 years ago

  • Status changed from Fix Under Review to Pending Backport
Actions #4

Updated by Backport Bot about 3 years ago

  • Copied to Backport #49454: octopus: [rbd-mirror] image rename might not be propagated under snapshot-based mode added
Actions #5

Updated by Backport Bot about 3 years ago

  • Copied to Backport #49455: pacific: [rbd-mirror] image rename might not be propagated under snapshot-based mode added
Actions #6

Updated by Nathan Cutler about 3 years ago

  • Status changed from Pending Backport to Resolved

While running with --resolve-parent, the script "backport-create-issue" noticed that all backports of this issue are in status "Resolved" or "Rejected".

Actions

Also available in: Atom PDF